// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Signup renders 1`] = `
<div
  className="row"
>
  <aside
    className="col-xs-12 col-sm-3"
    id="main-navigation"
  >
    <button
      aria-controls="local-nav"
      aria-expanded={false}
      className="local-nav-toggle"
      onClick={[Function]}
    >
      Menu
    </button>
    <nav
      aria-expanded={false}
      aria-label="main navigation"
      className="local-nav step-navigation"
      open={false}
    >
      <ul>
        <li>
          <a
            className="is-active is-current"
            href="/start"
            onClick={[Function]}
          >
            <span>
              Introduction
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/business-details"
            onClick={[Function]}
          >
            <span>
              Business basics
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/business-info"
            onClick={[Function]}
          >
            <span>
              Business details
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/your-info"
            onClick={[Function]}
          >
            <span>
              Contacts
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/disclosures"
            onClick={[Function]}
          >
            <span>
              Disclosures
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/documents"
            onClick={[Function]}
          >
            <span>
              Documents
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/tools"
            onClick={[Function]}
          >
            <span>
              Methods
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/awards"
            onClick={[Function]}
          >
            <span>
              Recognition
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/recruiter"
            onClick={[Function]}
          >
            <span>
              Recruiter
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/candidates"
            onClick={[Function]}
          >
            <span>
              Candidates
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/products"
            onClick={[Function]}
          >
            <span>
              Products
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/review"
            onClick={[Function]}
          >
            <span>
              Preview profile
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/update"
            onClick={[Function]}
          >
            <span>
              Preview and submit
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/submit"
            onClick={[Function]}
          >
            <span>
              Declaration
            </span>
          </a>
        </li>
      </ul>
    </nav>
  </aside>
  <article
    className="col-xs-12 col-sm-8 col-sm-push-1"
    id="content"
  >
    <div>
      <div>
        <h1
          className="au-display-xl"
        >
          Joining the Digital Marketplace
        </h1>
        <p>
          To become a registered seller and offer your services or software products to government you need to tell us about your business. The information you share will be used to create your seller profile.
        </p>
        <p>
          By completing this application you are automatically responding to an open approach to market, whose terms and conditions, like other government tenders, are 
          <a
            href="http://tenders.gov.au"
            rel="external noopener noreferrer"
            target="_blank"
          >
            publicly available.
          </a>
        </p>
        <h2
          className="au-display-lg"
        >
          You will need
        </h2>
        <ul>
          <li>
            your basic business information
          </li>
          <li>
            recent financial records or a viability statement from your accountant
          </li>
          <li>
            proof of relevant insurance cover
          </li>
          <li>
            to accept the Digital Marketplace Master Agreement
          </li>
        </ul>
        <p>
          <a
            href="/api/2/r/master-agreement-current.pdf"
            rel="noopener noreferrer"
            target="_blank"
          >
            Download Digital Marketplace Master Agreement (PDF 245KB)
          </a>
          <br />
          <br />
        </p>
        <p>
          You can save the progress of your application by selecting "Save and continue". If you wish to leave and come back later, select "Save and finish later".
        </p>
        <div />
        <p>
          <a
            className="button"
            href="#"
            onClick={[Function]}
          >
            Start now 
          </a>
        </p>
      </div>
    </div>
  </article>
</div>
`;

exports[`Signup renders empty Your Info form 1`] = `
<div
  className="row"
>
  <aside
    className="col-xs-12 col-sm-3"
    id="main-navigation"
  >
    <button
      aria-controls="local-nav"
      aria-expanded={false}
      className="local-nav-toggle"
      onClick={[Function]}
    >
      Menu
    </button>
    <nav
      aria-expanded={false}
      aria-label="main navigation"
      className="local-nav step-navigation"
      open={false}
    >
      <ul>
        <li>
          <a
            className=""
            href="/start"
            onClick={[Function]}
          >
            <span>
              Introduction
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/business-details"
            onClick={[Function]}
          >
            <span>
              Business basics
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/business-info"
            onClick={[Function]}
          >
            <span>
              Business details
            </span>
          </a>
        </li>
        <li>
          <a
            className="is-active is-current"
            href="/your-info"
            onClick={[Function]}
          >
            <span>
              Contacts
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/disclosures"
            onClick={[Function]}
          >
            <span>
              Disclosures
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/documents"
            onClick={[Function]}
          >
            <span>
              Documents
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/tools"
            onClick={[Function]}
          >
            <span>
              Methods
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/awards"
            onClick={[Function]}
          >
            <span>
              Recognition
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/recruiter"
            onClick={[Function]}
          >
            <span>
              Recruiter
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/candidates"
            onClick={[Function]}
          >
            <span>
              Candidates
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/products"
            onClick={[Function]}
          >
            <span>
              Products
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/review"
            onClick={[Function]}
          >
            <span>
              Preview profile
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/update"
            onClick={[Function]}
          >
            <span>
              Preview and submit
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/submit"
            onClick={[Function]}
          >
            <span>
              Declaration
            </span>
          </a>
        </li>
      </ul>
    </nav>
  </aside>
  <article
    className="col-xs-12 col-sm-8 col-sm-push-1"
    id="content"
  >
    <div
      className="au-body au-page-alerts   au-page-alerts--warning"
      style={
        Object {
          "marginBottom": "1.5em",
        }
      }
    >
      <p>
        Applications to join the Digital Marketplace will be closed
         
        <strong>
          between 9 and 30 May
        </strong>
         while we move Digital Marketplace to BuyICT. You can reapply on
         
        <a
          href="https://www.buyict.gov.au"
          rel="external"
          target="_blank"
        >
          BuyICT
        </a>
         
        <strong>
          after 30 May
        </strong>
        .
      </p>
    </div>
    <div
      className="layout"
    >
      <header>
        
        <h1
          className="au-display-xl"
          styleName="content-heading"
          tabIndex="-1"
        >
          Contact details
        </h1>
      </header>
      <article
        role="main"
      >
        <div
          className="calloutMistake"
        >
          <b>
             Avoid common mistakes 
          </b>
          <ul
            className="mistake-list"
          >
            <li>
              <b>
                Contact names
              </b>
               - use full names.
            </li>
            <li>
              <b>
                Email and phone numbers
              </b>
               - Check the format and details are correct.
            </li>
          </ul>
        </div>
        <form
          id="yourinfo"
          method="post"
          onReset={[Function]}
          onSubmit={[Function]}
        >
          <h2>
            Authorised representative
          </h2>
          <div
            className="field"
          >
            <label
              className="question-heading"
              htmlFor="representative"
            >
              Name
            </label>
            <p
              className="hint"
              id="representative-hint"
            >
              This is the person authorised to enter into contracts on behalf of the business.
            </p>
            <input
              className=""
              disabled={false}
              id="representative"
              name="representative"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              type="text"
              value=""
            />
          </div>
          <div
            className="field"
          >
            <label
              className="question-heading"
              htmlFor="email"
            >
              Email
            </label>
            <input
              className=""
              disabled={false}
              id="email"
              name="email"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              type="text"
              value=""
            />
          </div>
          <div
            className="field"
          >
            <label
              className="question-heading"
              htmlFor="phone"
            >
              Phone
            </label>
            <p
              className="hint"
              id="phone-hint"
            >
              Please include the area code for landlines.
            </p>
            <input
              className=""
              disabled={false}
              id="phone"
              name="phone"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              type="text"
              value=""
            />
          </div>
          <h2>
            Business contact
          </h2>
          <div
            className="field"
          >
            <label
              className="question-heading"
              htmlFor="contact_name"
            >
              Name
            </label>
            <p
              className="hint"
              id="contact_name-hint"
            >
              The contact listed on your seller profile page and the person who receives new opportunities by email.
            </p>
            <input
              className=""
              disabled={false}
              id="contact_name"
              name="contact_name"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              type="text"
              value=""
            />
          </div>
          <div
            className="field"
          >
            <label
              className="question-heading"
              htmlFor="contact_email"
            >
              Email
            </label>
            <input
              className=""
              disabled={false}
              id="contact_email"
              name="contact_email"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              type="text"
              value=""
            />
          </div>
          <div
            className="field"
          >
            <label
              className="question-heading"
              htmlFor="contact_phone"
            >
              Phone
            </label>
            <p
              className="hint"
              id="contact_phone-hint"
            >
              Please include the area code for landlines.
            </p>
            <input
              className=""
              disabled={false}
              id="contact_phone"
              name="contact_phone"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              type="text"
              value=""
            />
          </div>
          <input
            name="next_step_slug"
            type="hidden"
            value="disclosures"
          />
          <div
            className="row"
          >
            <div />
            <div
              className="col-xs-12 col-sm-12 col-md-9"
            >
              <button
                className="button-width button-width-left"
                type="submit"
              >
                Save and continue
              </button>
              <button
                className="save-button button-width button-width-right"
                onClick={[Function]}
              >
                Save and finish later
              </button>
            </div>
            <div
              className="col-xs-12 col-sm-12 col-md-3"
            >
              <div
                styleName="skip"
              >
                <button
                  className="button-secondary"
                  onClick={[Function]}
                  styleName="skip-link"
                >
                  Skip for now
                </button>
              </div>
            </div>
          </div>
        </form>
      </article>
    </div>
  </article>
</div>
`;

exports[`Signup renders populated Your Info form 1`] = `
<div
  className="row"
>
  <aside
    className="col-xs-12 col-sm-3"
    id="main-navigation"
  >
    <button
      aria-controls="local-nav"
      aria-expanded={false}
      className="local-nav-toggle"
      onClick={[Function]}
    >
      Menu
    </button>
    <nav
      aria-expanded={false}
      aria-label="main navigation"
      className="local-nav step-navigation"
      open={false}
    >
      <ul>
        <li>
          <a
            className=""
            href="/start"
            onClick={[Function]}
          >
            <span>
              Introduction
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/business-details"
            onClick={[Function]}
          >
            <span>
              Business basics
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/business-info"
            onClick={[Function]}
          >
            <span>
              Business details
            </span>
          </a>
        </li>
        <li>
          <a
            className="is-active is-current"
            href="/your-info"
            onClick={[Function]}
          >
            <span>
              Contacts
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/disclosures"
            onClick={[Function]}
          >
            <span>
              Disclosures
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/documents"
            onClick={[Function]}
          >
            <span>
              Documents
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/tools"
            onClick={[Function]}
          >
            <span>
              Methods
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/awards"
            onClick={[Function]}
          >
            <span>
              Recognition
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/recruiter"
            onClick={[Function]}
          >
            <span>
              Recruiter
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/candidates"
            onClick={[Function]}
          >
            <span>
              Candidates
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/products"
            onClick={[Function]}
          >
            <span>
              Products
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/review"
            onClick={[Function]}
          >
            <span>
              Preview profile
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/update"
            onClick={[Function]}
          >
            <span>
              Preview and submit
            </span>
          </a>
        </li>
        <li>
          <a
            className=""
            href="/submit"
            onClick={[Function]}
          >
            <span>
              Declaration
            </span>
          </a>
        </li>
      </ul>
    </nav>
  </aside>
  <article
    className="col-xs-12 col-sm-8 col-sm-push-1"
    id="content"
  >
    <div
      className="au-body au-page-alerts   au-page-alerts--warning"
      style={
        Object {
          "marginBottom": "1.5em",
        }
      }
    >
      <p>
        Applications to join the Digital Marketplace will be closed
         
        <strong>
          between 9 and 30 May
        </strong>
         while we move Digital Marketplace to BuyICT. You can reapply on
         
        <a
          href="https://www.buyict.gov.au"
          rel="external"
          target="_blank"
        >
          BuyICT
        </a>
         
        <strong>
          after 30 May
        </strong>
        .
      </p>
    </div>
    <div
      className="layout"
    >
      <header>
        
        <h1
          className="au-display-xl"
          styleName="content-heading"
          tabIndex="-1"
        >
          Contact details
        </h1>
      </header>
      <article
        role="main"
      >
        <div
          className="calloutMistake"
        >
          <b>
             Avoid common mistakes 
          </b>
          <ul
            className="mistake-list"
          >
            <li>
              <b>
                Contact names
              </b>
               - use full names.
            </li>
            <li>
              <b>
                Email and phone numbers
              </b>
               - Check the format and details are correct.
            </li>
          </ul>
        </div>
        <form
          action="https://httpbin.org/post"
          id="yourinfo"
          method="post"
          onReset={[Function]}
          onSubmit={[Function]}
        >
          <input
            id="csrf_token"
            name="csrf_token"
            type="hidden"
            value="abc"
          />
          <h2>
            Authorised representative
          </h2>
          <div
            className="field"
          >
            <label
              className="question-heading"
              htmlFor="representative"
            >
              Name
            </label>
            <p
              className="hint"
              id="representative-hint"
            >
              This is the person authorised to enter into contracts on behalf of the business.
            </p>
            <input
              className=""
              disabled={false}
              id="representative"
              name="representative"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              type="text"
              value="Paul Acron"
            />
          </div>
          <div
            className="field"
          >
            <label
              className="question-heading"
              htmlFor="email"
            >
              Email
            </label>
            <input
              className=""
              disabled={false}
              id="email"
              name="email"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              type="text"
              value="email@domain.com"
            />
          </div>
          <div
            className="field"
          >
            <label
              className="question-heading"
              htmlFor="phone"
            >
              Phone
            </label>
            <p
              className="hint"
              id="phone-hint"
            >
              Please include the area code for landlines.
            </p>
            <input
              className=""
              disabled={false}
              id="phone"
              name="phone"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              type="text"
              value="0292000000"
            />
          </div>
          <h2>
            Business contact
          </h2>
          <div
            className="field"
          >
            <label
              className="question-heading"
              htmlFor="contact_name"
            >
              Name
            </label>
            <p
              className="hint"
              id="contact_name-hint"
            >
              The contact listed on your seller profile page and the person who receives new opportunities by email.
            </p>
            <input
              className=""
              disabled={false}
              id="contact_name"
              name="contact_name"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              type="text"
            />
          </div>
          <div
            className="field"
          >
            <label
              className="question-heading"
              htmlFor="contact_email"
            >
              Email
            </label>
            <input
              className=""
              disabled={false}
              id="contact_email"
              name="contact_email"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              type="text"
            />
          </div>
          <div
            className="field"
          >
            <label
              className="question-heading"
              htmlFor="contact_phone"
            >
              Phone
            </label>
            <p
              className="hint"
              id="contact_phone-hint"
            >
              Please include the area code for landlines.
            </p>
            <input
              className=""
              disabled={false}
              id="contact_phone"
              name="contact_phone"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              type="text"
            />
          </div>
          <input
            name="next_step_slug"
            type="hidden"
            value="disclosures"
          />
          <div
            className="row"
          >
            <div />
            <div
              className="col-xs-12 col-sm-12 col-md-9"
            >
              <button
                className="button-width button-width-left"
                type="submit"
              >
                Save and continue
              </button>
              <button
                className="save-button button-width button-width-right"
                onClick={[Function]}
              >
                Save and finish later
              </button>
            </div>
            <div
              className="col-xs-12 col-sm-12 col-md-3"
            >
              <div
                styleName="skip"
              >
                <button
                  className="button-secondary"
                  onClick={[Function]}
                  styleName="skip-link"
                >
                  Skip for now
                </button>
              </div>
            </div>
          </div>
        </form>
      </article>
    </div>
  </article>
</div>
`;
